W11 :: Added with new file structure
FEAT: added w11 codes
FIX: file structure

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ hw1/answers/hw1/utils/__pycache__/model.cpython-312.pyc
 hw1/answers/hw1/utils/__pycache__/model_utils.cpython-312.pyc
 hw1/answers/hw1/utils/__pycache__/model_utils.cpython-311.pyc
 hw1/answers/hw1/utils/__pycache__/data_utils.cpython-312.pyc
+hw2/madison-stomach/test
+hw2/madison-stomach/train
